--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Indie+Flower');
+@import url('https://fonts.googleapis.com/css?family=Lato');
+@import url('https://fonts.googleapis.com/css?family=Julius+Sans+One');
 @import url('https://fonts.googleapis.com/css?family=Zilla+Slab+Highlight');
 svg.banner {
   width: 100%;
@@ -19,10 +20,10 @@ body{
 .startup{
   width: 100%;
   height: 100vh;
-  position: absolute;
+  position: fixed;
   animation-duration: 2s;
   animation-fill-mode: forwards;
-  background-color: #232323;
+  background-color: rgb(250,250,250);
   z-index: 1050;
 }
 
@@ -61,7 +62,6 @@ body{
   animation-duration: 2s;
   animation-fill-mode: forwards;
   background-color: #232323;
-  z-index: 1010;
 }
 
 .welcome-message{
@@ -77,6 +77,15 @@ body{
 .content{
   width: 100%;
   height: 100vh;
+  z-index: 1000;
+  position: absolute;
+}
+
+.content-main{
+  position: absolute;
+  top:100vh;
+  width: 100%;
+  height: 200vh;
 }
 
 .row{
@@ -110,6 +119,29 @@ body{
 }
 
 .right{
-  background-color: rgba(0,0,0,1);
+  background-color: white;
   height: 100vh;
+}
+
+.head-section
+{
+  width: 80%;
+  margin-left: 10%;
+  margin-right: 10%;
+  height: 80vh;
+  margin-top: 10vh;
+  margin-bottom: 10vh;
+  border-radius: 5px;
+  text-align: left;
+  color: black;
+  font-family: "Julius Sans One";
+  font-size: 25px;
+}
+
+.head-section-heading{
+  margin: 0 auto;
+  color: black;
+  font-family: "Zilla Slab Highlight";
+  font-size: 35px;
+  margin-bottom: 30px;
 }
